# campo

./: .env.example  .gitignore  README.md  check_memory.py  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test_memory.py
.github/workflows/: ci.yml
agents/: campo.py  localpulse.py  logistics.py  orchestrator.py  scout.py
api/: main.py
briefs/: pipeline.py  planner.py  refresh.py  researcher.py  store.py  verifier.py  writer.py
campo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: today-endpoints-report.md
evals/: conftest.py  golden_queries.json  verifier_cases.json
evals/e2e/: test_brief_quality.py  test_chat_endpoint.py
evals/integration/: test_history.py
evals/unit/: test_classifier.py  test_memory_prefilter.py  test_planner.py  test_refresh.py  test_verifier.py
fifa_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentTraceRow.tsx  BriefPanel.tsx  ChatPanel.tsx  Crest.tsx  GroupTable.tsx  IntelligencePanel.tsx  MatchCard.tsx  MessageBubble.tsx  MessageList.tsx  SourcesList.tsx  TabBar.tsx
frontend/src/lib/: agents.ts  api.ts
frontend/src/screens/: TodayScreen.tsx
llm/: factory.py
memory/: memory_manager.py  session_store.py
prompts/: briefs.py  campo.py  localpulse.py  logistics.py  scout.py
storage/: raft_state.json
tools/: briefs.py  competitions.py  espn.py  football_data.py  geo.py  logistics.py  mcp_client.py  search.py  venues.py  weather.py
(+5 files in other folders)
