[project]
name = "campo"
version = "0.1.0"
description = "World Cup 2026 Multi-Agent Intelligence System"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "h11>=0.16.0",
    "httpx>=0.28.1",
    "jsonpatch>=1.33",
    "jsonpointer>=3.1.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langsmith>=0.8.11",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "tavily-python>=0.7.25",
    "tenacity>=9.1.4",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*",
    "tools*",
    "prompts*",
    "memory*",
    "llm*",
    "qdrant*",
    "evals*",
    "api*",
    "mcp_server*",
]